# kiori

./: .gitignore  README.md  fix_flake8.py  pyproject.toml
.github/workflows/: publish.yml
examples/: 03_pygame_robot.py  03_pygame_robot_wo_chat_template.py  gemma_agent.py  gemma_agent_wo_chat_template.py
kiori/: __init__.py  agent.py  chat_templates.py  executor.py  memory.py  models.py  parser.py  router.py
tests/: test_core.py  test_memory.py  test_router.py
