[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kiori"
version = "1.2.2"
description = "A minimalist library with as few dependencies as possible."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Fujiwara Kyokugen", email = "antialberteinstein@gmail.com"}
]
requires-python = ">=3.8"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "build",
    "twine"
]
memory = [
    "pymilvus",
    "sentence-transformers"
]

[tool.setuptools.packages.find]
include = ["kiori*"]
